--- a/config/locales/views.zh-CN.yml
+++ b/config/locales/views.zh-CN.yml
@@ -9,8 +9,11 @@ zh-CN:
       detail: 查看话题
     show:
       media_reports: 媒体报道
+      topic_tracing: 话题追踪
       from: 来源
       original_link: 原文链接
   stories:
     show:
       related: 相关报道
+      from: 来源
+      original_link: 原文链接
