--- a/config/locales/views.zh-CN.yml
+++ b/config/locales/views.zh-CN.yml
@@ -2,6 +2,7 @@ zh-CN:
   components:
     nav:
       topics: 热门话题
+      daily: 每日早报
       news: 最新资讯
       opinions: 市场观点
   topics:
@@ -17,3 +18,6 @@ zh-CN:
       related: 相关报道
       from: 来源
       original_link: 原文链接
+  daily:
+    index:
+      daily_topics: 每日早报
