--- a/config/locales/views.zh-CN.yml
+++ b/config/locales/views.zh-CN.yml
@@ -8,14 +8,22 @@ zh-CN:
   topics:
     topic:
       detail: 查看话题
+    index:
+      trending: 热门话题
     show:
       media_reports: 媒体报道
       topic_tracing: 话题追踪
       from: 来源
       original_link: 原文链接
   stories:
+    index:
+      news: 最新资讯
+      opinions: 市场观点
     show:
       related: 相关报道
+      from: 来源
+      original_link: 原文链接
+    content:
       from: 来源
       original_link: 原文链接
   daily:
