--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -6,6 +6,11 @@ en:
       daily: Daily
       news: News
       opinions: Opinions
+    tabbar:
+      topics: Trending
+      daily: Daily
+      news: News
+      opinions: Opinions
   topics:
     topic:
       detail: Topic Detail
