--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -11,6 +11,8 @@ en:
       daily: Daily
       news: News
       opinions: Opinions
+    papy:
+      more: More
   topics:
     topic:
       detail: Topic Detail
